fix: Use 100dvh to fill the page on mobile

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -14,6 +14,10 @@
   height: 100%;
 }
 
+.h-dvh {
+  height: 100dvh;
+}
+
 :focus-visible {
   outline: none;
 }
